--- a/themes/stack/i18n/zh-cn.yaml
+++ b/themes/stack/i18n/zh-cn.yaml
@@ -53,6 +53,9 @@ search:
         other: "#PAGES_COUNT 个结果 （用时 #TIME_SECONDS 秒）"
 
 footer:
+    statistics:
+        other: 共 {{ .PassageNum }} 篇文章 😜 总计 {{ .WordNum.Get "total" }} 字
+
     builtWith:
         other: Built with {{ .Generator }}
 
