--- a/content/post/[模板]并查集.md
+++ b/content/post/[模板]并查集.md
@@ -4,7 +4,7 @@ date: 2022-08-01T15:56:12+08:00
 draft: false
 categories:	[模板]
 tags: [数据结构]
-image: "img/21.jpg"
+image: "cover/21.jpg"
 ---
 
 ## 路径压缩 + 按秩合并
