--- a/content/post/[模板]矩阵快速幂.md
+++ b/content/post/[模板]矩阵快速幂.md
@@ -3,8 +3,8 @@ title: "[模板]矩阵快速幂"
 date: 2022-07-30T12:47:37+08:00
 draft: false
 categories:	[模板]
-tags: [数论]
-image: "img/16.jpg"
+tags: [矩阵快速幂]
+image: "cover/16.jpg"
 ---
 
 ## 一
