--- a/content/post/[模板]缩点.md
+++ b/content/post/[模板]缩点.md
@@ -4,7 +4,7 @@ date: 2022-07-27T13:58:47+08:00
 draft: false
 categories:	[模板]
 tags: [图论]
-image: "img/19.jpg"
+image: "cover/19.jpg"
 ---
 
 # [【模板】缩点](https://www.luogu.com.cn/problem/P3387)
