--- a/content/post/[模板]高精度.md
+++ b/content/post/[模板]高精度.md
@@ -4,7 +4,7 @@ date: 2022-07-27T10:14:52+08:00
 draft: false
 categories:	[模板]
 tags: [高精度]
-image: "img/13.jpg"
+image: "cover/13.jpg"
 ---
 
 # 高精度加法
