--- a/content/post/oi-2048.md
+++ b/content/post/oi-2048.md
@@ -3,7 +3,7 @@ title: "Oi 2048"
 date: 2022-07-27T12:45:31+08:00
 draft: false
 categories:	[摸鱼]
-image: "img/9.jpg"
+image: "cover/9.jpg"
 ---
 
 <iframe id="moyu" src="https://ak-ioi.com/apps/oi-2048/" width="600px" height="800px" scrolling="no" style="overflow: hidden; border-width: 0; border-radius: 50px"></iframe>
