--- a/content/post/[模板]最小生成树.md
+++ b/content/post/[模板]最小生成树.md
@@ -4,7 +4,7 @@ date: 2022-07-28T08:56:06+08:00
 draft: false
 categories:	[模板]
 tags: [图论]
-image: "img/5.jpg"
+image: "cover/5.jpg"
 ---
 
 # Kruskal
