--- a/content/post/[模板]并查集.md
+++ b/content/post/[模板]并查集.md
@@ -13,7 +13,7 @@ image: "cover/21.jpg"
 
 ```cpp
 void init() {
-    for (int i = 1; i <= n; i++) f[i] = i, sz[i] = 1;
+    for (int i = 1; i <= n; i++) f[i] = i, rk[i] = 1;
 }
 
 int find(int x) {
@@ -24,10 +24,12 @@ int find(int x) {
 void merge(int x, int y) {
     x = find(x);
     y = find(y);
-    if (x == y) return;
-    if (sz[x] > sz[y]) swap(x, y);
-    f[x] = y;
-    sz[y] += sz[x];
+    if (rk[x] > rk[y])
+        f[y] = x;
+    else {
+        f[x] = y;
+        if (rk[x] == rk[y]) rk[y]++;
+    }
 }
 
 bool same(int x, int y) { return find(x) == find(y); }
