--- a/content/post/oi-2048.md
+++ b/content/post/oi-2048.md
@@ -6,4 +6,6 @@ categories:	[摸鱼]
 image: "cover/9.jpg"
 ---
 
+[原网址](https://ak-ioi.com/apps/oi-2048/)
+
 <iframe id="moyu" src="https://ak-ioi.com/apps/oi-2048/" width="600px" height="800px" scrolling="no" style="overflow: hidden; border-width: 0; border-radius: 50px"></iframe>
