--- a/content/post/[模板]割边.md
+++ b/content/post/[模板]割边.md
@@ -52,7 +52,6 @@ image: "cover/12.jpg"
 ## Code
 
 ```cpp
-
 #include <bits/stdc++.h>
 using namespace std;
 typedef long long ll;
@@ -67,7 +66,6 @@ typedef vector<pll> vpll;
 
 const int N = 100010, MOD = 1e9 + 7, INF = 0x3f3f3f3f;
 int n, m, u, v, dfn[N], ti, fa[N], low[N], child[N], cnt;
-bool ge[N];
 vi g[N];
 
 void tarjan(int u) {
@@ -75,17 +73,14 @@ void tarjan(int u) {
     for (auto v : g[u]) {
         if (!dfn[v]) {
             fa[v] = u;
-            child[u]++;
             tarjan(v);
             low[u] = min(low[u], low[v]);
-            if (fa[u] && low[v] >= dfn[u] && !ge[u]) ge[u] = true, cnt++;
-        } else if (v != fa[u]) {
+            if (low[v] > dfn[u]) {
+                cnt++;
+            }
+        } else if (dfn[v] < dfn[u] && fa[u] != v) {
             low[u] = min(low[u], dfn[v]);
         }
-    }
-    if (fa[u] == 0 && child[u] >= 2 && !ge[u]) {
-        ge[u] = true;
-        cnt++;
     }
 }
 
@@ -100,12 +95,10 @@ int main() {
         cin >> u >> v;
         g[u].push_back(v);
         g[v].push_back(u);
-    }
+    };
     for (int i = 1; i <= n; i++)
         if (!dfn[i]) tarjan(i);
-    cout << cnt << "\n";
-    for (int i = 1; i <= n; i++)
-        if (ge[i]) cout << i << " ";
+    cout << cnt;
     return 0;
 }
 ```
